<resources>
    <string name="app_name">日本語</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="nounHomeList">Noun Home List</string>
    <string name="verbHomeList">Verb Home List</string>
    <string name="adjHomeList">Adjective Home List</string>
    <string name="noun">Noun</string>
    <string name="verb">Verb</string>
    <string name="adjective">Adjective</string>
    <string name="home">Home</string>
    <string name="add_noun">Add Noun</string>
    <string name="add_verb">Add Verb</string>
    <string name="add_adjective">Add Adjective</string>
    <string name="add_adj">Add Adjective</string>
    <string name="edit_noun">Edit Noun</string>
    <string name="edit_adjective">Edit Adjective</string>
    <string name="edit_verb">Edit Verb</string>
    <string name="japanese_word">Japanese Word</string>
    <string name="english_word">English Word</string>
    <string name="hiragana_katakana">Hiragana/Katakana</string>
    <string name="kanji">Kanji</string>
    <string name="masu_form">MASU-Form</string>
    <string name="masu_form_past">MASU-Form Past</string>
    <string name="masu_form_negative">MASU-Form Negative</string>
    <string name="masu_form_past_negative">MASU-Form Past Negative</string>
    <string name="verb_type">Verb Type</string>
    <string name="negative">Negative</string>
    <string name="past">Past</string>
    <string name="past_negative">Past Negative</string>
    <string name="adjective_type">Adjective Type</string>
    <string name="view_noun">View Noun</string>
    <string name="view_adjective">View Adjective</string>
    <string name="view_verb">View Verb</string>

</resources>
