<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/japanese_word"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView

                android:textColor="@android:color/black"
                android:id="@+id/textView_noun_japanese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/english_word"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:textColor="@android:color/black"
                android:id="@+id/textView_noun_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/hiragana_katakana"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:textColor="@android:color/black"
                android:id="@+id/textView_noun_hiraganakatakana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/kanji"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:textColor="@android:color/black"
                android:id="@+id/textView_noun_kanji"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />

            <Button
                android:id="@+id/button_noun_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/cancelGrey"
                android:text="EDIT"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>
    
</LinearLayout>