<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radioGroup_verb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RadioButton
                        android:id="@+id/radioButton_verb_u"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="う-Verb" />

                    <RadioButton
                        android:id="@+id/radioButton_verb_ru"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="る-Verb" />
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/japanese_word"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <EditText
                     android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:id="@+id/editText_verb_japaneseWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/english_word"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <EditText
                     android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:id="@+id/editText_verb_englishWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/hiragana_katakana"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <EditText
                     android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:id="@+id/editText_verb_hirakata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/kanji"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <EditText
                     android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:id="@+id/editText_verb_kanji"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/masu_form"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <EditText
                     android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:id="@+id/editText_verb_masu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/masu_form_past"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <EditText
                     android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:id="@+id/editText_verb_masupast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/masu_form_negative"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <EditText
                     android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:id="@+id/editText_verb_masunegative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/masu_form_past_negative"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <EditText
                     android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:id="@+id/editText_verb_masupastnegative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/button_verb_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@color/cancelGrey"
                    android:text="Clear"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/button_verb_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/japanRed"
                    android:text="Save"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>